# Benchmark-v700-performance-prediction

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  ADDING_NEW_WORKLOAD.md  CMakeLists.txt  CMakeLists_gsat.txt  Dockerfile  LAUNCH.md  README.md  SETUP.md  SOFTWARE_DESIGN.md  TREES_IMPLEMENTATION.md  WORKLOADS.md  WORKLOADS_RUS.md  build.gradle  compile.sh  plaf.inc  sys_config_checks.inc
common/: binding.h  error.h  gsat.h  gsat_node.h  gstats.h  gstats_global.h  multi_counter.h  numa_tools.h  plaf.h  random.h  random_xoshiro256p.h  rwlock.h  server_clock.h  stats.h  tree_stats.h
cpp/: .gitignore  ADDING_NEW_WORKLOAD.md  CMakeLists.txt  LAUNCH.md  README.md  SETUP.md  SOFTWARE_DESIGN.md
cpp/common/: bit.h  dict.h  dict_helpers.h  error.h  gsat.h  gstats.h  random_xoshiro256p.h
cpp/common/kcas/: kcas_reuse_htm_full_impl.h  kcas_reuse_htm_impl.h  kcas_reuse_impl.h  kcas_validate.h  kcas_validate_htm.h
cpp/common/papi/: papi_util_impl.h
cpp/ds-copy/brown_ext_chromatic_lf/: scxrecord.h
cpp/ds-copy/brown_sigouin_abtree_kcas/: abtree_kcas.h
cpp/ds-copy/ist/: adapter.h
cpp/ds-copy/redis_sabt/: adapter.h  sabt_node.h
cpp/ds-copy/redis_sait/: sait.h
cpp/ds-copy/redis_salt/: log_delimiter.h  salt.h  salt_node_builder.h
cpp/ds-copy/sait/: adapter.h
cpp/ds/bronson_pext_bst_occ/: adapter.h  ccavl_impl.h
cpp/ds/brown_ext_abtree_lf/: adapter.h
cpp/ds/brown_ext_bslack_rq_lf/: adapter.h  bslack_impl.h
cpp/ds/brown_ext_chromatic_lf/: chromatic.h  chromatic_impl.h  node.h
cpp/ds/drachsler_pext_bst_lock/: adapter.h  drachsler_impl.h
cpp/ds/ds-copy/redis_sabt/: constant_delimiter.h  sabt.h
cpp/ds/ds-copy/redis_sait/: sqrt_delimiter.h
cpp/ds/ds-copy/redis_zset/: zset.h
cpp/ds/ds-copy/salt/: adapter.h
cpp/ds/ds-copy/sigouin_skip_list_kcas/: skiplist.h
cpp/ds/ds-copy/srivastava_abtree_mcs/: adapter.h  optik_btree.h
cpp/ds/ellen_ext_bst_lf/: adapter.h  ellen_impl.h
cpp/ds/guerraoui_ext_bst_ticket/: adapter.h  ticket_impl.h
cpp/ds/howley_int_bst_lf/: adapter.h  howley_impl.h
cpp/ds/redis_sabt/: sabt_node_builder.h
cpp/ds/redis_sait/: sait_node_builder.h
cpp/ds/redis_salt/: salt_node.h
cpp/ds/redis_zset/: zskiplist.h
cpp/ds/sabt/: adapter.h
cpp/ds/sast/: adapter.h
cpp/ds/sigouin_int_bst_kcas/: adapter.h  internal_kcas.h
cpp/ds/sigouin_int_bst_kcas_unbalanced/: internal_kcas_unbalanced.h
cpp/ds/splay_tree/: adapter.h
cpp/ds/wang_openbwtree/: bwtree.h
cpp/gsat/: REDIS.md  TREES_IMPLEMENTATION.md
cpp/gsat/cmake/: FindCatch.cmake  TestSolution.cmake
cpp/gsat/common/: error.h
cpp/gsat/ds/btree/: btree.h  btree_node.h  btree_node_handler.h
cpp/gsat/ds/gsat/: gsat_node.h
cpp/gsat/ds/ist/: CMakeLists.txt  id.h  ist.h
cpp/gsat/ds/sabt/: CMakeLists.txt  sabt.h  test.cpp
cpp/gsat/ds/sait/: sait.h
cpp/gsat/ds/salt/: salt_node.h
cpp/gsat/ds/splay_tree/: splay_node.h  test.cpp
cpp/gsat/test/: stat.h  stress_test.h  test.h  tree_builder.h
cpp/gsat/test/map/: CMakeLists.txt  map.h
cpp/gsat/test/util/: gen.h  operation.h
cpp/microbench/: CMakeLists.txt  Makefile  chain.sh  define_global_statistics.h  globals_extern.h  globals_t_impl.h  main.cpp  parse_argument.h  run-stat.sh  run.sh  stat.sh  tree_stats.cpp
cpp/microbench/cache-measurements/: cache_template.csv  conf.json
cpp/microbench/caches/: main.cpp  out.csv  run-all.sh  skewed-r-1.json  skewed-r-4.json  skewed-r-8.json  skewed-rw-1.json  skewed-rw-4.json  skewed-rw-8.json  uniform-r-1.json  uniform-r-4.json  uniform-r-8.json  uniform-rw-1.json  uniform-rw-4.json  uniform-rw-8.json
cpp/microbench/caches/small-speed/: out.csv  run-all.sh  uniform-r-1.json  uniform-r-2c.json  uniform-r-2n.json  uniform-r-2w.json
cpp/microbench/caches/speed/: uniform-r-1.json  uniform-r-2c.json  uniform-r-2n.json  uniform-r-2w.json
cpp/microbench/json_example/: Makefile  creakers_and_wave_example.json  json_example.cpp  json_example.txt  json_example_creakers_and_wave.txt  json_example_temp_oper.txt  json_example_temp_skewed.txt  result.json  temp_skewed_example.json
cpp/microbench/papi_test/: a.out  main.cpp
cpp/microbench/workloads/: bench_parameters.h  parameters.h
cpp/microbench/workloads/args_generators/: args_generator.h  args_generator_builder.h  args_generator_json_convector.h
cpp/microbench/workloads/args_generators/impls/: creakers_and_wave_args_generator.h  default_args_generator.h  leafs_handshake_args_generator.h  seq_arg_generator.h  simple_skewed_args_generator.h  skewed_insert_args_generator.h  skewed_sets_args_generator.h  temporary_skewed_args_generator.h
cpp/microbench/workloads/data_maps/: data_map_json_convector.h
cpp/microbench/workloads/data_maps/builders/: id_data_map_builder.h
cpp/microbench/workloads/data_maps/impls/: array_data_map.h
cpp/microbench/workloads/distributions/: distribution.h  distribution_builder.h  distribution_json_convector.h
cpp/microbench/workloads/distributions/builders/: biased_uniform_distribution_builder.h  skewed_uniform_distribution_builder.h  uniform_distribution_builder.h
cpp/microbench/workloads/distributions/impls/: biased_uniform_distribution.h  skewed_uniform_distribution.h  uniform_distribution.h  zipf_distribution.h
cpp/microbench/workloads/stop_condition/: stop_condition.h  stop_condition_json_convector.h
cpp/microbench/workloads/thread_loops/: thread_loop.h  thread_loop_impl.h  thread_loop_json_convector.h
cpp/microbench/workloads/thread_loops/impls/: default_thread_loop.h  getonly_thread_loop.h  prefill_insert_thread_loop.h  seq_thread_loop.h
cpp/plotting/: README.md  exp_table_builder.py  plotter.py  requirements.txt
cpp/scripts/: json.py
docker/: Dockerfile  _ci_build.sh  _ci_clean.sh  _ci_docker_test.sh  _ci_launch.sh  _ci_test_launched.sh  _ci_test_macro.sh  build_docker_image.sh  (+9 more)
(+2009 files in other folders)
